toward viewing accounts and pulling from server
